; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/sparc/kernel/extr_ldc.c_head_for_data.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/sparc/kernel/extr_ldc.c_head_for_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ldc_channel = type { i64, i64, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@LDC_MODE_STREAM = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.ldc_channel*)* @head_for_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @head_for_data(%struct.ldc_channel* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.ldc_channel*, align 8
  store %struct.ldc_channel* %0, %struct.ldc_channel** %3, align 8
  %4 = load %struct.ldc_channel*, %struct.ldc_channel** %3, align 8
  %5 = getelementptr inbounds %struct.ldc_channel, %struct.ldc_channel* %4, i32 0, i32 2
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load i64, i64* @LDC_MODE_STREAM, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %14

10:                                               ; preds = %1
  %11 = load %struct.ldc_channel*, %struct.ldc_channel** %3, align 8
  %12 = getelementptr inbounds %struct.ldc_channel, %struct.ldc_channel* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  store i64 %13, i64* %2, align 8
  br label %18

14:                                               ; preds = %1
  %15 = load %struct.ldc_channel*, %struct.ldc_channel** %3, align 8
  %16 = getelementptr inbounds %struct.ldc_channel, %struct.ldc_channel* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  store i64 %17, i64* %2, align 8
  br label %18

18:                                               ; preds = %14, %10
  %19 = load i64, i64* %2, align 8
  ret i64 %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
